@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (September 16, 2023)"
-.Dd September 16, 2023
+.\" Modified by Ken DEGUCHI (September 22, 2023)"
+.Dd September 22, 2023
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
@@ -264,8 +264,6 @@ Install
 with
 .Ar FLAVOR=py37
 .Pp
-.Dl pkg_replace -m FLAVOR=py37 -N graphics/py-cairo
-or
 .Dl pkg_replace -N graphics/py-cairo@py37
 .It
 Replace
